istioctl/pkg/writer/envoy/configdump/testdata/listenerdump.json
{
    "@type": "type.googleapis.com/envoy.admin.v2alpha.ListenersConfigDump",
    "versionInfo": "2018-05-29 20:35:10.051043472 +0000 UTC m=+615.036247510",
    "dynamicActiveListeners": [
        {
            "versionInfo": "2018-05-29 20:34:55.438944238 +0000 UTC m=+600.424148258",
            "listener": {
                "name": "0.0.0.0_8080",
                "address": {
                    "socketAddress": {
                        "address": "0.0.0.0",
                        "portValue": 8080
                    }
                },
                "filterChains": [
                    {
                        "filters": [
                            {
                                "name": "envoy.http_connection_manager",
                                "config": {
                                    "stat_prefix": "http",
                                    "use_remote_address": false,
                                    "generate_request_id": true,
                                    "access_log": [
                                        {
                                            "name": "envoy.file_access_log",
                                            "config": {
                                                "path": "/dev/stdout"
                                            }
                                        }
                                    ],
                                    "http_filters": [
                                        {
                                            "name": "mixer",
                                            "config": {
                                                "transport": {
                                                    "report_cluster": "outbound|9091||istio-telemetry.istio-system.svc.cluster.local",
                                                    "check_cluster": "outbound|9091||istio-policy.istio-system.svc.cluster.local"
                                                },
                                                "service_configs": {
                                                    "details.default.svc.cluster.local": {
                                                        "disable_report_calls": true,
                                                        "disable_check_calls": true,
                                                        "mixer_attributes": {
                                                            "attributes": {
                                                                "destination.service": {
                                                                    "string_value": "details.default.svc.cluster.local"
                                                                },
                                                                "destination.labels": {
                                                                    "string_map_value": {
                                                                        "entries": {
                                                                            "pod-template-hash": "57643725",
                                                                            "app": "details",
                                                                            "version": "v1"
                                                                        }
                                                                    }
                                                                }
                                                            }
                                                        }
                                                    }
                                                },
                                                "default_destination_service": "details.default.svc.cluster.local",
                                                "forward_attributes": {
                                                    "attributes": {
                                                        "source.ip": {
                                                            "bytes_value": "AAAAAAAAAAAAAP//rB5N8w=="
                                                        },
                                                        "source.uid": {
                                                            "string_value": "kubernetes://details-v1-9cb87c69-t2fdz.default"
                                                        },
                                                        "source.labels": {
                                                            "string_map_value": {
                                                                "entries": {
                                                                    "pod-template-hash": "57643725",
                                                                    "app": "details",
                                                                    "version": "v1"
                                                                }
                                                            }
                                                        }
                                                    }
                                                },
                                                "mixer_attributes": {
                                                    "attributes": {}
                                                }
                                            }
                                        },
                                        {
                                            "name": "envoy.cors"
                                        },
                                        {
                                            "name": "envoy.fault"
                                        },
                                        {
                                            "name": "envoy.router"
                                        }
                                    ],
                                    "route_config": {
                                        "name": "8080",
                                        "validate_clusters": false,
                                        "virtual_hosts": [
                                            {
                                                "routes": [
                                                    {
                                                        "match": {
                                                            "prefix": "/"
                                                        },
                                                        "decorator": {
                                                            "operation": "default-route"
                                                        },
                                                        "route": {
                                                            "cluster": "outbound|8080||istio-pilot.istio-system.svc.cluster.local"
                                                        }
                                                    }
                                                ],
                                                "domains": [
                                                    "istio-pilot.istio-system.svc.cluster.local",
                                                    "istio-pilot.istio-system.svc.cluster.local:8080",
                                                    "istio-pilot.istio-system",
                                                    "istio-pilot.istio-system:8080",
                                                    "istio-pilot.istio-system.svc.cluster",
                                                    "istio-pilot.istio-system.svc.cluster:8080",
                                                    "istio-pilot.istio-system.svc",
                                                    "istio-pilot.istio-system.svc:8080",
                                                    "172.21.245.9",
                                                    "172.21.245.9:8080"
                                                ],
                                                "name": "istio-pilot.istio-system.svc.cluster.local:8080"
                                            }
                                        ]
                                    },
                                    "tracing": {
                                        "operation_name": "EGRESS"
                                    }
                                }
                            }
                        ]
                    }
                ],
                "deprecatedV1": {
                    "bindToPort": false
                }
            }
        }
    ]
}
